// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`betterer should throw if there is no constraint 1`] = `
Array [
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 
",
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 

Error: could not read config from \\"<project>/fixtures/test-betterer-custom-no-constraint/.betterer\\". 😔
      at BettererContextΩ._getTests (<project>/packages/betterer/dist/context/context.js:2211:13)
      at <project>/packages/betterer/dist/context/context.js:2112:38
      at Array.map (<anonymous>)
      at BettererContextΩ._initTests (<project>/packages/betterer/dist/context/context.js:2107:29)
      at BettererContextΩ.run (<project>/packages/betterer/dist/context/context.js:1959:24)
      at Object.serial (<project>/packages/betterer/dist/runner/runner.js:911:18)
      at <project>/packages/betterer/dist/betterer.js:909:47
      at runContext (<project>/packages/betterer/dist/betterer.js:1074:18)
      at <project>/test/betterer-custom.spec.ts:16:34
      at Object.<anonymous> (<project>/test/betterer-custom.spec.ts:16:9)

Error: for a test to work, it must have a \`constraint\` function. ❌
      at Object.createTestConfig (<project>/packages/betterer/dist/test/config.js:1146:11)
      at new BettererTest (<project>/packages/betterer/dist/test/test.js:517:29)
      at <project>/packages/betterer/dist/context/context.js:2192:18
      at Array.forEach (<anonymous>)
      at BettererContextΩ._getTests (<project>/packages/betterer/dist/context/context.js:2175:32)
      at <project>/packages/betterer/dist/context/context.js:2112:38
      at Array.map (<anonymous>)
      at BettererContextΩ._initTests (<project>/packages/betterer/dist/context/context.js:2107:29)
      at BettererContextΩ.run (<project>/packages/betterer/dist/context/context.js:1959:24)
      at Object.serial (<project>/packages/betterer/dist/runner/runner.js:911:18)
",
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 

Error: could not read config from \\"<project>/fixtures/test-betterer-custom-no-constraint/.betterer\\". 😔
      at BettererContextΩ._getTests (<project>/packages/betterer/dist/context/context.js:2211:13)
      at <project>/packages/betterer/dist/context/context.js:2112:38
      at Array.map (<anonymous>)
      at BettererContextΩ._initTests (<project>/packages/betterer/dist/context/context.js:2107:29)
      at BettererContextΩ.run (<project>/packages/betterer/dist/context/context.js:1959:24)
      at Object.serial (<project>/packages/betterer/dist/runner/runner.js:911:18)
      at <project>/packages/betterer/dist/betterer.js:909:47
      at runContext (<project>/packages/betterer/dist/betterer.js:1074:18)
      at <project>/test/betterer-custom.spec.ts:16:34
      at Object.<anonymous> (<project>/test/betterer-custom.spec.ts:16:9)

Error: for a test to work, it must have a \`constraint\` function. ❌
      at Object.createTestConfig (<project>/packages/betterer/dist/test/config.js:1146:11)
      at new BettererTest (<project>/packages/betterer/dist/test/test.js:517:29)
      at <project>/packages/betterer/dist/context/context.js:2192:18
      at Array.forEach (<anonymous>)
      at BettererContextΩ._getTests (<project>/packages/betterer/dist/context/context.js:2175:32)
      at <project>/packages/betterer/dist/context/context.js:2112:38
      at Array.map (<anonymous>)
      at BettererContextΩ._initTests (<project>/packages/betterer/dist/context/context.js:2107:29)
      at BettererContextΩ.run (<project>/packages/betterer/dist/context/context.js:1959:24)
      at Object.serial (<project>/packages/betterer/dist/runner/runner.js:911:18)
",
]
`;

exports[`betterer should throw if there is no test 1`] = `
Array [
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 
",
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 

Error: could not read config from \\"<project>/fixtures/test-betterer-custom-no-test/.betterer\\". 😔
      at BettererContextΩ._getTests (<project>/packages/betterer/dist/context/context.js:2211:13)
      at <project>/packages/betterer/dist/context/context.js:2112:38
      at Array.map (<anonymous>)
      at BettererContextΩ._initTests (<project>/packages/betterer/dist/context/context.js:2107:29)
      at BettererContextΩ.run (<project>/packages/betterer/dist/context/context.js:1959:24)
      at Object.serial (<project>/packages/betterer/dist/runner/runner.js:911:18)
      at <project>/packages/betterer/dist/betterer.js:909:47
      at runContext (<project>/packages/betterer/dist/betterer.js:1074:18)
      at <project>/test/betterer-custom.spec.ts:34:34
      at Object.<anonymous> (<project>/test/betterer-custom.spec.ts:34:9)

Error: for a test to work, it must have a \`test\` function. ❌
      at Object.createTestConfig (<project>/packages/betterer/dist/test/config.js:1159:11)
      at new BettererTest (<project>/packages/betterer/dist/test/test.js:517:29)
      at <project>/packages/betterer/dist/context/context.js:2192:18
      at Array.forEach (<anonymous>)
      at BettererContextΩ._getTests (<project>/packages/betterer/dist/context/context.js:2175:32)
      at <project>/packages/betterer/dist/context/context.js:2112:38
      at Array.map (<anonymous>)
      at BettererContextΩ._initTests (<project>/packages/betterer/dist/context/context.js:2107:29)
      at BettererContextΩ.run (<project>/packages/betterer/dist/context/context.js:1959:24)
      at Object.serial (<project>/packages/betterer/dist/runner/runner.js:911:18)
",
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 

Error: could not read config from \\"<project>/fixtures/test-betterer-custom-no-test/.betterer\\". 😔
      at BettererContextΩ._getTests (<project>/packages/betterer/dist/context/context.js:2211:13)
      at <project>/packages/betterer/dist/context/context.js:2112:38
      at Array.map (<anonymous>)
      at BettererContextΩ._initTests (<project>/packages/betterer/dist/context/context.js:2107:29)
      at BettererContextΩ.run (<project>/packages/betterer/dist/context/context.js:1959:24)
      at Object.serial (<project>/packages/betterer/dist/runner/runner.js:911:18)
      at <project>/packages/betterer/dist/betterer.js:909:47
      at runContext (<project>/packages/betterer/dist/betterer.js:1074:18)
      at <project>/test/betterer-custom.spec.ts:34:34
      at Object.<anonymous> (<project>/test/betterer-custom.spec.ts:34:9)

Error: for a test to work, it must have a \`test\` function. ❌
      at Object.createTestConfig (<project>/packages/betterer/dist/test/config.js:1159:11)
      at new BettererTest (<project>/packages/betterer/dist/test/test.js:517:29)
      at <project>/packages/betterer/dist/context/context.js:2192:18
      at Array.forEach (<anonymous>)
      at BettererContextΩ._getTests (<project>/packages/betterer/dist/context/context.js:2175:32)
      at <project>/packages/betterer/dist/context/context.js:2112:38
      at Array.map (<anonymous>)
      at BettererContextΩ._initTests (<project>/packages/betterer/dist/context/context.js:2107:29)
      at BettererContextΩ.run (<project>/packages/betterer/dist/context/context.js:1959:24)
      at Object.serial (<project>/packages/betterer/dist/runner/runner.js:911:18)
",
]
`;
